fixed padding on home page and fixed card layout issue on home page

--- a/src/app/components/home-card/home-card.component.css
+++ b/src/app/components/home-card/home-card.component.css
@@ -5,13 +5,14 @@
     border-radius: 10px;
     padding: 18px 12px 18px 12px;
     background-color: #FFFFFF;
-    gap: 10px;
+    gap: 14px;
     border: none;
     position: relative;
 }
 .container{
     padding: 0px !important;
     margin-top: 10px;
+    margin-bottom: 10px;
     border: none;
 }
 #title{
@@ -52,12 +53,7 @@
     bottom: 1%;
     right: 1%;
 }
-#info{
-    height: auto;
-    width: 5%;
-    position: absolute;
-    right: 10%;
-}
+
 #status{
     height: auto;
     width: 78px;
