--- a/src/styles.css
+++ b/src/styles.css
@@ -33,7 +33,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 @media screen and (max-width: 431px) {
     .main-container, .container {
-        padding: 3% 3% 3% 3% !important; 
+        padding: 15px 25px 10px 25px !important; 
     }
     
     #navbar-fixed,
@@ -53,7 +53,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
         margin-top: 87px; /* 75px height + 12px margin */
     }
     
-    /* app-rebate > .main-container,
+    app-rebate > .main-container,
     app-rebate-admin > .main-container,
     app-guest-admin > .main-container,
     app-statistics > .container,
@@ -61,6 +61,13 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     app-student-list > .container,
     app-mess-bill > .container,
     app-overview > .container {
-        padding: 1% 7% 3% 7% !important;
-    } */
+        padding: 10px 25px 10px 25px !important;
+    } 
+    .info-icon {
+    position: absolute;
+    right: 12px;
+    top: 12px;
+    width: 22px;
+    height: 22px;
+}
 }
